--- a/brithdate Information/brithdate_information.html
+++ b/brithdate Information/brithdate_information.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <table>
-        <th colspan="3">Birthdate Information Website</th>
+        <th colspan="3" id="title">Birthdate Information Website</th>
         <tr>
-            <td colspan="3">Name:<input id="name" type="text" size="50"></td>
+            <td colspan="3">Name: <input id="name" type="text" size="50"></td>
         </tr>
         <tr>
-            <td>
-                Month:
+            <td>Month: 
                 <select name="month" id="month">
                     <option value="01">January</option>
                     <option value="02">February</option>
@@ -28,26 +28,18 @@
                     <option value="10">October</option>
                     <option value="11">November</option>
                     <option value="12">December</option>
-                </select>
+                  </select>
             </td>
-            <td>Date: <input id="date" type="text"> </td>
-            <td>Year: <input id="year" type="text"> </td>
+            <td>Date: <input id="date" type="text"></td>
+            <td>Year: <input id="year" type="text"></td>
         </tr>
         <tr>
             <td colspan="3"><button id="analyze" onclick="analyze()">Analyze!</button></td>
         </tr>
-        <tr>
-            <td colspan="3"><p id="result_name"></p></td>
-        </tr>
-        <tr>
-            <td colspan="3"><p id="result_age"></p></td>
-        </tr>
-        <tr>
-            <td colspan="3"><p id="result_birthday"></p></td>
-        </tr>
-        <tr>
-            <td colspan="3"><p id="result_gen"></p></td>
-        </tr>
+        <tr><td colspan="3"><p id="result_name"></p></td></tr>
+        <tr><td colspan="3"><p id="result_age"></p></td></tr>
+        <tr><td colspan="3"><p id="result_birthday"></p></td></tr>
+        <tr><td colspan="3"><p id="result_shio"></p></td></tr>
     </table>
 </body>
 </html>
